--- a/odessa.html
+++ b/odessa.html
@@ -93,7 +93,7 @@
 
                 <div class="text-right section">
                     <div class="img">
-                        <img src="public/i/kyiv/eda/1.jpg" alt="">
+                        <img src="public/i/odessa/eda/1.jpg" alt="">
                     </div>
                     <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem
                         nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat
@@ -108,14 +108,14 @@
                 <div class="narrow section">
                     <div class="with-two-images-and-bottom-location">
                         <div>
-                            <img src="public/i/tmp_1.jpg" alt="">
+                            <img src="public/i/odessa/eda/2.jpg" alt="">
                             <div class="location italic">
                                 <p>Адрес:</p>
                                 <p>Рейтарской 9, <br>вход через серую калитку</p>
                             </div>
                         </div>
                         <div>
-                            <img src="public/i/tmp_1.jpg" alt="">
+                            <img src="public/i/odessa/eda/3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                 <div class="narrow section">
                     <div class="with-three-images-and-top-location">
                         <div>
-                            <img src="public/i/tmp_1.jpg" alt="">
+                            <img src="public/i/odessa/eda/4.jpg" alt="">
 
                         </div>
                         <div>
@@ -137,8 +137,8 @@
                                 <p>Адрес:</p>
                                 <p>Рейтарской 9, <br>вход через серую калитку</p>
                             </div>
-                            <img src="public/i/kyiv/eda/4.jpg" alt="">
-                            <img src="public/i/kyiv/eda/4.jpg" alt="">
+                            <img src="public/i/odessa/eda/5.jpg" alt="">
+                            <img src="public/i/odessa/eda/6.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -153,9 +153,9 @@
                 <div class="narrow section">
                     <div class="with-three-images-sans-text-and-bottom-location">
                         <div>
-                            <img src="public/i/tmp_1.jpg" alt="">
+                            <img src="public/i/odessa/eda/7.jpg" alt="">
                             <div class="img with-location">
-                                <img src="public/i/kyiv/eda/4.jpg" alt="">
+                                <img src="public/i/odessa/eda/8.jpg" alt="">
                                 <div class="location left italic">
                                     <p>Адрес:</p>
                                     <p>Рейтарской 9, вход через серую калитку</p>
@@ -164,7 +164,7 @@
                         </div>
                         <div>
                             <p class="uppercase sans middle-default">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim minima illo nemo quis ut inventore expedita ipsum. Dolorum quidem maxime possimus sunt ex beatae assumenda perspiciatis, officia, ducimus suscipit quasi!</p>
-                            <img src="public/i/tmp_1.jpg" alt="">
+                            <img src="public/i/odessa/eda/9.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
 
 
                 <div class="with-img section">
-                    <img src="public/i/kyiv/eda/4.jpg" alt="">
+                    <img src="public/i/odessa/eda/10.jpg" alt="">
                 </div>
 
 
