--- a/odessa.html
+++ b/odessa.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="public/css/common.css">
 </head>
-<!-- на главной у боди нет класса, а на странице контента класс .article -->
 
 <body class="article">
 
@@ -88,21 +87,15 @@
                 <h1>Одесса - Еда</h1>
 
                 <p class="narrow section">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum.
+                    В одесском дворике за столом сидят шумные молодые люди, кое-какие дети рядом и тарелки с чем-то — не разглядеть — на столе кастрюлька, покрытая полотенцем, графин граненый, бутылки. Мне кажется, что эта компания точно ест форшмак из дунайки, отварной картофель и только что выловленную рыбку сарган, похожую на маленького угря. Я люблю приезжать в Одессу – здесь я совершенна свободна и здесь меня ждут гастрономические открытия. На Привозе брусочки домашней овечьей брынзы можно съесть просто на ходу, положив на половинку разорванной прямо руками помидорины. Этот город всегда согреет солнцем, и точно появилось несколько новых ресторанов за время моего отсутствия по которым в этот раз я проехалась в хорошей компании – с карточкой Mastercard и на машине Мерседес GLA 200.
                 </p>
 
                 <div class="text-right section">
                     <div class="img">
                         <img src="public/i/odessa/eda/1.jpg" alt="">
                     </div>
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem
-                        nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat
-                        dolorem nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam,
-                        quo fugiat dolorem nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia,
-                        quibusdam, quo fugiat dolorem nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam
-                        officia, quibusdam, quo fugiat dolorem nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium
-                        quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas
-                        laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum.</p>
+                    <p class="">Кофейня White whale, принадлежащее тем же владельцам, что и ресторан Frabule и кондитерская Make My Cake находится в переулке Вице-Адмирала Жукова. Главный акцент заведения на карте кофе. Кроме классических эспрессо, капучино и нескольких видов латте есть кофе, который заваривают в фирменных японских кофеварках, напоминающих алхимическую посуду. Кофе, заваренный альтернативным методом pour-over ("налить сверху"), очень мягкий, с утонченным вкусом; считается, что он скорее похож на чай или хорошее вино, хотя кофеина в нем больше, чем при любом другом способе заваривания. Тот же кофе, заваренный в вакуумном сифоне, получается более насыщенным, с ярко выраженной крепкой текстурой. Весь кофе в White whale — собственного фирменного купажа и своей обжарки, как в профессиональной сетевой кофейне. Так что идеологически верно приходить сюда именно на кофе.</p>
+                    <p class="">В меню есть несколько видов сендвичей. Я попробовала с луковым мармеладом, грушей и сыром дор блю. Еще сюда приходят, чтобы послушать музыку. Когда была я играл альбом Кендрика Ламара.</p>
                 </div>
 
                 <div class="narrow section">
