--- a/odessa.html
+++ b/odessa.html
@@ -105,7 +105,7 @@
                             <img src="public/i/odessa/eda/2.jpg" alt="">
                             <div class="location italic">
                                 <p>Адрес:</p>
-                                <p>Рейтарской 9, <br>вход через серую калитку</p>
+                                <p>переулок Вице-Адмирала Жукова</p>
                             </div>
                         </div>
                         <div>
@@ -116,15 +116,15 @@
 
 
 
-                <p class="narrow section">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum.
+                <div class="narrow section">
+                    <p>Bernardazzi</p>
+                    <p>«Знаете, за что я очень полюбил это место? Это очень энергетическое место - оно сильное. Это старое здание одесской филармонии, когда я впервые зашел на кухню, а я двенадцать лет рисовал граффити диджеил и плотно был связан с хип-хопом, решил, что ее нужно разрисовать. И я начал рисовать картины овощными сиропами. То есть - картины из еды. После окончания сервиса мы рисуем всей командой - выдавливаем на холст фреш из овощей, вывариваем их с сахаром, они приобретают классную текстуру, плюс мы обыгрываем картину овощными чипсами, используем все, что угодно», - говорит мне молодой шеф повар Александр Еурз во время экскурсии по кухне ресторана Bernardazzi. Позицию шеф-повара Александр занял всего 6 месяцев назад, состав команды на кухне сменился на 90%, неизменно одно - сомелье ресторана Алексей Дмитриев, с которым шеф-повар работает рука об руку, каждый месяц разрабатывая новое меню и подбирая ингредиенты блюд под винную коллекцию Bernardazzi. К примеру, к чизкейку из копченого лосося с яблочно-базиликовым соусом и красной икрой идеальная пара – (белое??) вино название год оно вкус какой??, к печеным перцам с тремя видами брынзы разной выдержки и песто из мяты – вино??, а с бисквитом в яичной скорлупе, который подается с куриными чипсами с карамелью со вкусом хрена отлично комбинируется вино??. </p>
                 </p>
 
                 <div class="narrow section">
                     <div class="with-three-images-and-top-location">
                         <div>
                             <img src="public/i/odessa/eda/4.jpg" alt="">
-
                         </div>
                         <div>
                             <div class="location italic">
@@ -165,8 +165,7 @@
 
 
                 <p class="narrow section">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum. Lorem ipsum
-                    dolor sit amet, consectetur adipisicing elit. At esse aliquam vitae a qui optio, minus quia, eum dolorem debitis architecto ex hic fugiat deserunt tempora expedita ab porro! In.
+                    У лапши-бара Noodleman есть все шансы стать очень большим и очень успешным проектом, как только публика распробует вкус хрустящих маринованных огурцов карамелизированных в меде, куриного соте с арахисовым карри соусом, бао с креветкой, лапши с грибами и настоящего супа рамена. Большую плошку дымящегося прозрачнейшего крепкого говяжьего бульона, сдобренного вьетнамскими специями, с рисовой лапшой, тонкими ломтями мяса и свежей душистой зеленью в небольшой зал ресторана гостям иногда выносит сам шеф повар Том Катли и рассказывает больше о здешней кухне. Скорая помощь организму приходит уже через пару ложек этого вкуснейшего супа, к середине плошки лоб покрывается испариной, а к концу по всему телу разливается умиротворяющее тепло, в голове наступает полнейшая ясность, а в душе ощущается прилив энергии и сил. Все, что есть в меню Noodleman способно поставить на ноги, исцелить, согреть, вытрезвить и вдобавок доставить ни с чем не сравнимое гастрономическое удовольствие.
                 </p>
 
 
