--- a/odessa.html
+++ b/odessa.html
@@ -98,7 +98,7 @@
                     <div class="img">
                         <img src="public/i/odessa/eda/1.jpg" alt="">
                     </div>
-                    <p class="">Кофейня White whale, принадлежащее тем же владельцам, что и ресторан Frabule и кондитерская Make My Cake находится в переулке Вице-Адмирала Жукова. Главный акцент заведения на карте кофе. Кроме классических эспрессо, капучино и нескольких видов латте есть кофе, который заваривают в фирменных японских кофеварках, напоминающих алхимическую посуду. Кофе, заваренный альтернативным методом pour-over ("налить сверху"), очень мягкий, с утонченным вкусом; считается, что он скорее похож на чай или хорошее вино, хотя кофеина в нем больше, чем при любом другом способе заваривания. Тот же кофе, заваренный в вакуумном сифоне, получается более насыщенным, с ярко выраженной крепкой текстурой. Весь кофе в White whale — собственного фирменного купажа и своей обжарки, как в профессиональной сетевой кофейне. Так что идеологически верно приходить сюда именно на кофе.</p>
+                    <p class="">Кофейня White whale, принадлежащее тем же владельцам, что и ресторан Frabule и кондитерская Make My Cake находится в переулке Вице-Адмирала Жукова. Главный акцент заведения на карте кофе. Кроме классических эспрессо, капучино и нескольких видов латте есть кофе, который заваривают в фирменных японских кофеварках, напоминающих алхимическую посуду. Кофе, заваренный альтернативным методом pour-over ("налить сверху"), очень мягкий, с утонченным вкусом; считается, что он скорее похож на чай или хорошее вино, хотя кофеина в нем больше, чем при любом другом способе заваривания. Тот же кофе, заваренный в вакуумном сифоне, получается более насыщенным, с ярко выраженной крепкой текстурой.</p>
                 </div>
 
                 <div class="narrow section">
@@ -119,7 +119,7 @@
                 <p class="narrow section">Весь кофе в White whale — собственного фирменного купажа и своей обжарки, как в профессиональной сетевой кофейне. Так что идеологически верно приходить сюда именно на кофе. В меню есть несколько видов сендвичей. Я попробовала с луковым мармеладом, грушей и сыром дор блю. Еще сюда приходят, чтобы послушать музыку. Когда была я играл альбом Кендрика Ламара.</p>
 
                 <div class="narrow section">
-                    <p>Следующая точка маршрута – ресторан Bernardazzi. «Знаете, за что я очень полюбил это место? Это очень энергетическое место - оно сильное. Это старое здание одесской филармонии, когда я впервые зашел на кухню, а я двенадцать лет рисовал граффити диджеил и плотно был связан с хип-хопом, решил, что ее нужно разрисовать. И я начал рисовать картины овощными сиропами. То есть - картины из еды. После окончания сервиса мы рисуем всей командой - выдавливаем на холст фреш из овощей, вывариваем их с сахаром, они приобретают классную текстуру, плюс мы обыгрываем картину овощными чипсами, используем все, что угодно», - говорит мне молодой шеф повар Александр Еурз во время экскурсии по кухне Bernardazzi</p>
+                    <p>Следующая точка маршрута – ресторан Bernardazzi. «Знаете, за что я очень полюбил это место? Это очень энергетическое место - оно сильное. Это старое здание одесской филармонии, когда я впервые зашел на кухню, а я двенадцать лет рисовал граффити диджеил и плотно был связан с хип-хопом, решил, что ее нужно разрисовать. И я начал рисовать картины овощными сиропами. То есть - картины из еды. После окончания сервиса мы рисуем всей командой - выдавливаем на холст фреш из овощей, вывариваем их с сахаром, они приобретают классную текстуру, плюс мы обыгрываем картину овощными чипсами, используем все, что угодно», - говорит мне молодой шеф повар Александр Еурз во время экскурсии по кухне Bernardazzi.</p>
                 </p>
 
                 <div class="narrow section">
@@ -141,9 +141,8 @@
                 <p class="narrow section">Позицию шеф-повара Александр занял всего 6 месяцев назад, состав команды на кухне сменился на 90%, неизменно одно - сомелье ресторана Алексей Дмитриев, с которым шеф-повар работает рука об руку, каждый месяц разрабатывая новое меню и подбирая ингредиенты блюд под винную коллекцию Bernardazzi. К примеру, к чизкейку из копченого лосося с яблочно-базиликовым соусом и красной икрой идеальная пара – (белое??) вино название год оно вкус какой??, к печеным перцам с тремя видами брынзы разной выдержки и песто из мяты – вино??, а с бисквитом в яичной скорлупе, который подается с куриными чипсами с карамелью со вкусом хрена отлично комбинируется вино?</p>
 
                 <p class="narrow section">
-                    У лапши-бара Noodleman есть все шансы стать очень большим и очень успешным проектом, как только публика распробует вкус хрустящих маринованных огурцов карамелизированных в меде, куриного соте с арахисовым карри соусом, бао с креветкой, лапши с грибами и настоящего супа рамена. Большую плошку дымящегося прозрачнейшего крепкого говяжьего бульона, сдобренного вьетнамскими специями, с рисовой лапшой, тонкими ломтями мяса и свежей душистой зеленью в небольшой зал ресторана гостям иногда выносит сам шеф повар Том Катли и рассказывает больше о здешней кухне.
+                    Последняя точка гастрономического маршрута – экзотическое заведение на Еврейской улице 47 – лапша бар NoodleMan.
                 </p>
-
 
                 <div class="narrow section">
                     <div class="with-three-images-sans-text-and-bottom-location">
@@ -158,7 +157,7 @@
                             </div>
                         </div>
                         <div>
-                            <p class="uppercase sans middle-default">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim minima illo nemo quis ut inventore expedita ipsum. Dolorum quidem maxime possimus sunt ex beatae assumenda perspiciatis, officia, ducimus suscipit quasi!</p>
+                            <p class="uppercase sans middle-default">У лапши-бара Noodleman есть все шансы стать очень большим и очень успешным проектом, как только публика распробует вкус хрустящих маринованных огурцов карамелизированных в меде, куриного соте с арахисовым карри соусом, бао с креветкой, лапши с грибами и настоящего супа рамена.</p>
                             <img src="public/i/odessa/eda/9.jpg" alt="">
                         </div>
                     </div>
