--- a/odessa.html
+++ b/odessa.html
@@ -164,7 +164,7 @@
                 </div>
 
 
-                <p class="narrow section">Скорая помощь организму приходит уже через пару ложек этого вкуснейшего супа, к середине плошки лоб покрывается испариной, а к концу по всему телу разливается умиротворяющее тепло, в голове наступает полнейшая ясность, а в душе ощущается прилив энергии и сил. Все, что есть в меню Noodleman способно поставить на ноги, исцелить, согреть, вытрезвить и вдобавок доставить ни с чем не сравнимое гастрономическое удовольствие.
+                <p class="narrow section">Большую плошку дымящегося прозрачнейшего крепкого говяжьего бульона, сдобренного вьетнамскими специями, с рисовой лапшой, тонкими ломтями мяса и свежей душистой зеленью в небольшой зал ресторана гостям иногда выносит сам шеф повар Том Катли и рассказывает больше о здешней кухне.
                 </p>
 
 
@@ -173,9 +173,7 @@
                 </div>
 
 
-                <p class="narrow section">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda repellendus suscipit, obcaecati cumque voluptates eligendi id voluptatum ipsa sapiente fuga voluptas laudantium quia! Veniam officia, quibusdam, quo fugiat dolorem nostrum. Lorem ipsum
-                    dolor sit amet, consectetur adipisicing elit. At esse aliquam vitae a qui optio, minus quia, eum dolorem debitis architecto ex hic fugiat deserunt tempora expedita ab porro! In.
+                <p class="narrow section">Скорая помощь организму приходит уже через пару ложек этого вкуснейшего супа, к середине плошки лоб покрывается испариной, а к концу по всему телу разливается умиротворяющее тепло, в голове наступает полнейшая ясность, а в душе ощущается прилив энергии и сил. Все, что есть в меню Noodleman способно поставить на ноги, исцелить, согреть, вытрезвить и вдобавок доставить ни с чем не сравнимое гастрономическое удовольствие.
                 </p>
 
                 <br>
