--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -92,7 +92,7 @@
 				</p>
 
 				<div class="with-video narrow">
-					<div id="player" data-iframe="mQVsTJoMCTo"></div>
+					<div id="player" data-iframe="0mkXdNiIhE4"></div>
 				</div>
 
 				<p class="narrow section">
@@ -124,21 +124,26 @@
 				</p>
 
 
-				<p class="narrow section">
-					Следом перемерила наряды украинской марки Nomad, представленные в салоне. Они сшиты из старинного, тканого вручную полотна (его разыскивают по всей Украине), из волокон конопли или льна, и оформлены тоже вручную – но уже с учетом современной моды.
-				</p>
-
-
-
-
 				<div class="with-img section">
 					<img src="public/i/kyiv/spa/4.jpg" alt="">
 				</div>
 
 				<p class="narrow section">
+					Следом перемерила наряды украинской марки Nomad, представленные в салоне. Они сшиты из старинного, тканого вручную полотна (его разыскивают по всей Украине), из волокон конопли или льна, и оформлены тоже вручную – но уже с учетом современной моды.
+				</p>
+
+				<p class="narrow section">
 					Рядом с одеждой расположился ювелирный корнер: необычные украшения, наполненные смыслом. Некоторые гармонизируют чакры и активируют нужные. Например, надеваешь на шею тонкую цепочку, от которой спускаются к талии длинные металлические нити с покачивающимися
 					подвесками, - и, кажется, что меняются даже осанка и жесты.
 				</p>
+
+				<div class="with-two-images narrow section">
+					<img src="public/i/kyiv/spa/5.jpg" alt="">
+					<img src="public/i/kyiv/spa/6.png" alt="">
+					<div class="subtitle">
+						<!-- <span class="italic">Больше о программе привелегий</span> Master Card -->
+					</div>
+				</div>
 
 				<p class="narrow section">
 					Все процедуры в Око спа начинаются с того, что мастер предлагает понюхать ароматные смеси. Одни пахнут чистой ромашкой, другие – чувственной смесью, где явственно ощущается жасмин. В зависимости от того, какую выбирает клиент, мастер определяет текущее
@@ -146,13 +151,7 @@
 				</p>
 
 
-				<div class="with-two-images narrow section">
-					<img src="public/i/kyiv/spa/5.jpg" alt="">
-					<img src="public/i/kyiv/spa/6.png" alt="">
-					<div class="subtitle">
-						<span class="italic">Больше о программе привелегий</span> Master Card
-					</div>
-				</div>
+
 
 
 				<p class="narrow section">
