--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="public/css/common.css">
+	<title>#DiscoveredByVogue: Бьюти-гид по Киеву</title>
 </head>
 <!-- на главной у боди нет класса, а на странице контента класс .article -->
 
@@ -85,10 +86,10 @@
 
 
 			<div class="kyiv-spa">
-				<h1>Киев - Спа</h1>
+				<h1>#DiscoveredByVogue: Бьюти-гид по Киеву</h1>
 
 				<p class="narrow section">
-					В совместном проекте Vogue UA, Mersedes и MasterCard редактора Vogue ездят по Украине и открывают самые интересные места. Алена Пономаренко проехала на Smart по киевским спа и рассказывает, как это было.
+					В совместном проекте VogueUA, Merсеdes-Benz и MasterCard редактора Vogue ездят по Украине и открывают самые интересные места. Алена Пономаренко проехала на smart по киевским спа и рассказывает, как это было.
 				</p>
 
 				<div class="with-video narrow">
@@ -104,7 +105,7 @@
 							<img src="public/i/kyiv/spa/2.jpg" alt="">
 							<div class="location left italic">
 								<p>Адрес:</p>
-								<p>Рейтарской 9, вход через серую калитку</p>
+								<p>ул.Жилянская, 59 (Дипломат хол)</p>
 							</div>
 						</div>
 						<p>Я очень люблю киевский OKO Spa. Все начиналось с уютного затемненного салона на тихой улице Дарвина, сегодня у него появилось продолжение – просторное, светлое, медитативное пространство на Жилянской. Здешнее спа-меню – обширное и разнообразное.</p>
@@ -157,15 +158,15 @@
 
 				<div class="narrow section" style="font-size: 0;">
 					<div style="width:60%; padding-right: 20px; display: inline-block; vertical-align: top;">
-						<img src="public/i/kyiv/spa/8.jpg" alt="">
+						<img src="public/i/kyiv/spa/123.jpg" alt="">
 					</div>
 					<div style="width:40%; display: inline-block; vertical-align: top;">
 						<p><img src="public/i/kyiv/spa/9.jpg" alt=""></p>
 						<p>
-							Уже одевшись, я вспомнила, что выбежала из дому без наличных. Выручила платиновая Master Card. Я расплатилась – и отправилась на Подол, в один из главных спа страны, Elixir Luxury Beauty.
+							Уже одевшись, я вспомнила, что выбежала из дому без наличных. Выручила платиновая Mastercard. Я расплатилась – и отправилась на Подол, в один из главных спа страны, Elixir Luxury Beauty.
 						</p>
 						<p>
-							Малышу Smart пробки не страшны: он лавирует в потоке, как заряженный атом. А вдобавок – позволяет припарковаться там, где обычной машине нечего и мечтать.
+							Малышу smart пробки не страшны: он лавирует в потоке, как заряженный атом. А вдобавок – позволяет припарковаться там, где обычной машине нечего и мечтать.
 						</p>
 					</div>
 				</div>
@@ -192,7 +193,7 @@
 					<div style="width:30%; display: inline-block; vertical-align: top;">
 						<div class="location italic" style="position:static; margin-top:45px;">
 							<p>Адрес:</p>
-							<p>Рейтарской 9, <br>вход через серую калитку</p>
+							<p>ул. Набережно-Крещатицкая, 1</p>
 						</div>
 						<img src="public/i/kyiv/spa/13.jpg" alt="" style="margin-top:15px;">
 					</div>
@@ -241,7 +242,7 @@
 				</div>
 
 				<p class="narrow section">
-					И, встряхивая локонами, покатила на Smart дальше, не переставая посматривать в удивительно удобные панорамные боковые зеркала.
+					И, встряхивая локонами, покатила на smart дальше, не переставая посматривать в удивительно удобные панорамные боковые зеркала.
 					<br />
 					В IP Med Spa на Оболонской набережной я хожу с момента его открытия, то есть без малого два года. Тут отличные косметологи, эстетисты по телу, колористы. А вдобавок – вид на Днепр, который открывается из окон едва ли не каждого кабинета.
 				</p>
@@ -254,7 +255,7 @@
 					<div style="width:30%; display: inline-block; vertical-align: top;">
 						<div class="location italic" style="position:static; margin-top:20px;">
 							<p>Адрес:</p>
-							<p>Рейтарской 9, <br>вход через серую калитку</p>
+							<p>ул. Оболонская набережная, 1</p>
 						</div>
 						<img src="public/i/kyiv/spa/18.jpg" alt="">
 					</div>
@@ -271,7 +272,7 @@
 
 
 				<p class="narrow section">
-					Уже через 25 минут можно было приступать к укладке. Никаких сложностей, просто аккуратно высушим волосы, - сказал мой мастер. Когда он закончил, у меня было чувство, что я нахожусь в центре невесомого ароматного облака. «Аромат пробудет с вами весь вечер – и всю ночь», - пообещал Еагений. А я подумала, что этот уход – идеальная альтернатива духам, который в летнюю жару звучат слишком громко.
+					Уже через 25 минут можно было приступать к укладке. Никаких сложностей, просто аккуратно высушим волосы, - сказал мой мастер. Когда он закончил, у меня было чувство, что я нахожусь в центре невесомого ароматного облака. «Аромат пробудет с вами весь вечер – и всю ночь», - пообещал Евгений. А я подумала, что этот уход – идеальная альтернатива духам, который в летнюю жару звучат слишком громко.
 				</p>
 
 
@@ -283,11 +284,14 @@
 
 
 				<p class="narrow section">
-					Когда я протягивала свою MasterCard Platinum на стойке reception, мне казалось, что даже выпуклые буквы на ней слегка пахнут сложной удовой композицией. «Некоторые клиентки ходят к нам на восстановление волос каждую неделю», - рассказали мне в салоне. Думаю, моя карта тоже могла бы осилить такой график. Но в конце концов, есть дела и поважнее: в следующий раз нас ждет Одесса.
+					Когда я протягивала свою Mastercard Platinum на стойке reception, мне казалось, что даже выпуклые буквы на ней слегка пахнут сложной удовой композицией. «Некоторые клиентки ходят к нам на восстановление волос каждую неделю», - рассказали мне в салоне. Думаю, моя карта тоже могла бы осилить такой график. Но в конце концов, есть дела и поважнее: в следующий раз нас ждет Одесса.
 				</p>
 
 
-
+				<p class="narrow section">
+					<span class="bold">Фото</span>: Kate Lang <br>
+					<span class="bold">Видео</span>: Анна Бугакова
+				</p>
 
 
 
