--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -89,7 +89,7 @@
 				<h1>#DiscoveredByVogue: Бьюти-гид по Киеву</h1>
 
 				<p class="narrow section">
-					В совместном проекте VogueUA, Merсеdes-Benz и MasterCard редактора Vogue ездят по Украине и открывают самые интересные места. Алена Пономаренко проехала на <a href="https://www.smart.com/ua/uk/index/special-offers/special-offers.html" target="_blank" style="color:#000; text-decoration:underline">smart</a> по киевским спа и рассказывает, как это было.
+					В совместном проекте VogueUA, <a href="http://www.mercedes-benz.ua/" target="_blank" style="color:#000; text-decoration:underline">Merсеdes-Benz</a> и <a href="https://www.mastercard.ua/uk-ua.html" target="_blank" style="color:#000; text-decoration:underline">Mastercard&#174;</a> редактора Vogue ездят по Украине и открывают самые интересные места. Алена Пономаренко проехала на <a href="https://www.smart.com/ua/uk/index/special-offers/special-offers.html" target="_blank" style="color:#000; text-decoration:underline">smart</a> по киевским спа и рассказывает, как это было.
 				</p>
 
 				<div class="with-video narrow">
