--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -166,7 +166,7 @@
 							Уже одевшись, я вспомнила, что выбежала из дому без наличных. Выручила платиновая Mastercard. Я расплатилась – и отправилась на Подол, в один из главных спа страны, Elixir Luxury Beauty.
 						</p>
 						<p>
-							Малышу smart пробки не страшны: он лавирует в потоке, как заряженный атом. А вдобавок – позволяет припарковаться там, где обычной машине нечего и мечтать.
+							Малышу smart fortwo пробки не страшны: он лавирует в потоке, как заряженный атом. А вдобавок – позволяет припарковаться там, где обычной машине нечего и мечтать.
 						</p>
 					</div>
 				</div>
