--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -244,7 +244,7 @@
 				<p class="narrow section">
 					И, встряхивая локонами, покатила на smart дальше, не переставая посматривать в удивительно удобные панорамные боковые зеркала.
 					<br />
-					В IP Med Spa на Оболонской набережной я хожу с момента его открытия, то есть без малого два года. Тут отличные косметологи, эстетисты по телу, колористы. А вдобавок – вид на Днепр, который открывается из окон едва ли не каждого кабинета.
+					В IP Med Spa на Оболонской набережной я хожу с момента его открытия, то есть без малого два года. Тут отличные косметологи, эстетисты по телу, колористы. А вдобавок – вид на Днепр, который открывается из окон едва ли не каждого кабинета. Днём кажется, что окна лишь условно отделяют от живописных пейзажей, вечером - от городских огней. Мне нравится приходить пораньше и в ожидании своей записи рассматривать бесконечные ряды средств, которых тут – как в хорошем онлайн-магазине.
 				</p>
 
 
@@ -262,17 +262,20 @@
 				</div>
 
 				<p class="narrow section">
-					В этот раз мне было интересно попробовать самый дорогой уход за волосами в моей жизни (один только шампунь стоит около трех тысяч гривен). Флаконы с янтарным содержимым так хороши, что украсят любую парфюмерную полку, а их ароматы с нотами уда и амбры напоминают о парижских пятизвездных отелях, где стены обиты шелком и везде царит полумрак.
+					На сегодня мне обещано знакомство с необычной маркой, франко-швейцарской Atelier de Shampoo Extraordinnaire – «Экстраординарное Ателье Шампуня», которая специализируется на концептуальном уходе за кожей головы и волосами. Atelier de Shampoo Extraordinaire – что называется secretly famous бренд: рекламы не дает, но в узких (и обеспеченных) кругах известен.  Средства – предметы коллекционирования: их выпускают лимитированными тиражами. Но ценности бренда традиционные – естественная красота и здоровье волос, - объясняет стилист по прическам Евгений Проваторов. Процедуру проводят в VIP-кабинете: у меня нет соседей по креслам, а на полках -  ничего, кроме драгоценных флаконов. Это самый дорогой уход за волосами в моей жизни (один только шампунь стоит около трех тысяч гривен). 
+				</p>
+				
+				<p class="narrow section">
+					 Флаконы с янтарным содержимым так хороши, что украсят любую парфюмерную полку, а их ароматы с нотами уда и амбры напоминают о парижских пятизвездных отелях, где стены обиты шелком и везде царит полумрак. Для моих волос Евгений выбрал формулу Elixir Millionaire. Сказал, что это волшебный эликсир, собрание редких эссенций,  драгоценных масел-абсолю со всех уголков мира.  Он восстанавливает и преображает поврежденные волосы и кожу головы. 
+				</p>
+
+				<p class="narrow section">
+					 Уход занял не больше получаса. Если мы откроем окна, - думала я, - то аромат вырвется из салона и окутает набережную. Весь уход занял не больше получаса, и Евгений приступил к укладке. 
 				</p>
 
 
 				<p class="narrow section">
-					Стилист по волосам Евгений вымыл мне волосы шампунем, затем нанес эликсир для кожи головы, который мягко растворяет отмершие клетки («Здоровые волосы растут только из здоровой кожи головы»). Если мы откроем окна, - думала я, - то аромат вырвется из салона и окутает набережную. Тем временем Евгений нанес мне на волосы по всей длине сыворотку, укутал шапочкой и усадил под «нимб» - специальное устройство, которое помогает раскрыть чешуйки волос и внедрить туда целебный состав на нужную глубину.
-				</p>
-
-
-				<p class="narrow section">
-					Уже через 25 минут можно было приступать к укладке. Никаких сложностей, просто аккуратно высушим волосы, - сказал мой мастер. Когда он закончил, у меня было чувство, что я нахожусь в центре невесомого ароматного облака. «Аромат пробудет с вами весь вечер – и всю ночь», - пообещал Евгений. А я подумала, что этот уход – идеальная альтернатива духам, который в летнюю жару звучат слишком громко.
+				Никаких сложностей, просто аккуратно высушим волосы, - сказал мой мастер. Когда он закончил, у меня было чувство, что я нахожусь в центре невесомого ароматного облака. «Аромат пробудет с вами весь вечер – и всю ночь», - пообещал Еагений. А я подумала, что этот уход – идеальная альтернатива духам, который в летнюю жару звучат слишком громко. 
 				</p>
 
 
@@ -284,7 +287,7 @@
 
 
 				<p class="narrow section">
-					Когда я протягивала свою Mastercard Platinum на стойке reception, мне казалось, что даже выпуклые буквы на ней слегка пахнут сложной удовой композицией. «Некоторые клиентки ходят к нам на восстановление волос каждую неделю», - рассказали мне в салоне. Думаю, моя карта тоже могла бы осилить такой график. Но в конце концов, есть дела и поважнее: в следующий раз нас ждет Одесса.
+					Когда я протягивала свою MasterCard Platinum на стойке reception, мне казалось, что даже выпуклые буквы на ней слегка пахнут сложной удовой композицией. «Некоторые клиентки ходят к нам на восстановление волос каждую неделю», - рассказали мне в салоне. Думаю, моя карта тоже могла бы осилить такой график. Но в конце концов, есть дела и поважнее: в следующий раз нас ждет Одесса. 
 				</p>
 
 
