--- a/kyiv-spa.html
+++ b/kyiv-spa.html
@@ -250,7 +250,7 @@
 
 				<div class="narrow section" style="font-size: 0;">
 					<div style="width:70%; padding-right: 20px; display: inline-block; vertical-align: top;">
-						<img src="public/i/kyiv/spa/17.jpg" alt="">
+						<img src="public/i/kyiv/spa/123321.jpg" alt="">
 					</div>
 					<div style="width:30%; display: inline-block; vertical-align: top;">
 						<div class="location italic" style="position:static; margin-top:20px;">
