--- a/lviv-spa.html
+++ b/lviv-spa.html
@@ -150,6 +150,7 @@
                             <img src="public/i/lviv/DSC_3959.jpg" alt="">
                         </div>
                         <div>
+							<div class="location italic" style="display: none;"></div>
                             <img src="public/i/lviv/DSC_4013.jpg" alt="">
                             <img src="public/i/lviv/DSC_4144.jpg" alt="">
                         </div>
