--- a/lviv-spa.html
+++ b/lviv-spa.html
@@ -197,8 +197,8 @@
 					<div style="width:60%; padding-right: 20px; display: inline-block; vertical-align: top;">
 						<img src="public/i/lviv/DSC_4597.jpg" alt="">
 					</div>
-					<div style="width:50%; display: inline-block; vertical-align: top;">
-						<div class="location italic">
+					<div style="width:40%; display: inline-block; vertical-align: top;">
+						<div class="location italic" style="position:static">
 							<p>Адрес:</p>
 							<p>улица Щирецкая, 36</p>
 						</div>
