--- a/kyiv-eda.html
+++ b/kyiv-eda.html
@@ -125,63 +125,33 @@
 				</p>
 
 
-
-
-
-
-
-				<div class="narrow section rel">
-					<div class="img" style="padding-right:200px;">
-						<img src="public/i/odessa/spa/1.png" alt="">
-					</div>
-					<div class="location right italic" style="bottom:0; right:0">
+				<div class="narrow section rel" style="font-size:0">
+					<img src="public/i/odessa/spa/7.png" alt="" style="display: inline-block; vertical-align: top; 0;width: 50%;" />
+					<div class="location left italic" style="width: 50%;">
 						<p>Адрес:</p>
 						<p>ул. Генуэзская, 1А</p>
 					</div>
+					<img src="public/i/odessa/spa/6.png" alt="" style="display: inline-block; vertical-align: top; 0;width: 50%;" />
 				</div>
 
-				<p class="narrow section">
-					Эта история, когда за кадром плещет море, тенистые одесские улицы укрыты, как ковром, желтым акациевым цветом, а по мощеным улицам плывет Mercedes-Benz, могла бы вдохновить и Катаева, и Бабеля, и Ильфа с Петровым. В ней воплотились самые яркие клише о
-					красивой одесской жизни: пышный цветущий город, море с акациями, дорогая машина и сидящая в ней девушка с платиновой Mastercard Platinum в клатче Chanel.
-				</p>
-
-				<div class="with-two-images narrow section">
-					<img src="public/i/odessa/spa/2.png" alt="">
-					<img src="public/i/odessa/spa/3.png" alt="">
-				</div>
 
 				<p class="narrow section">
-					Этой девушкой посчастливилось быть мне. И должна признаться: белый Mercedes и Одесса – идеальное сочетание – настолько, что из машины почти не хочется выходить. Но, конечно, это шутка: меня ждут в Ark SPA Palace. Спа я выбирала придирчиво: опросила друзей,
-					которые часто проводят в Одессе выходные, а параллельно – подключила консьерж-сервис своей Mastercard Platinum. Оказалось, гениальная штука: когда нет времени на серфинг в интернете и телефонные звонки, можно поставить задачу специально обученному
-					человеку, и он найдет то, что нужно: от билетов на самолет или в оперу до свободной записи на маникюр. Ну или в спа, как в моем случае. Забавно, что рекомендации моих друзей и консьерж-сервиса Mastercard совпали.
+					Lucky Restaurant Vinotheque<br> Владимир Ярославский — опытный шеф-повар, и его меню в ресторане Lucky вполне заслуживает, чтобы посетить это заведение — лучше всего днем или ранним вечером, чтобы сосредоточиться исключительно на еде. Недавно Владимир
+					прошел стажировку в двухзвездочном лондонском ресторане The Ledbury, откуда привез новые рецепты, вроде ребра красного ангуса с пюре из копченной свеклы. Ресторан находится внутри Good Wine, и это очень удобно: прийти в ресторан можно с любым шампанским
+					или вином с магазинной полки. Отдельного cork fee не берут, зато к вину сразу предлагают легкие закуски - прошутто, хамон, оливки, вяленые томаты и артишоки.
+
 				</p>
 
-				<div class="narrow section">
-					<div class="text-right">
-						<div class="img" style="text-align: right;">
-							<img src="public/i/odessa/spa/4.png" alt="">
-							<img src="public/i/odessa/spa/5.png" alt="" style="margin-top: 15px; width: 50%; display: inline-block;">
-						</div>
-						<p class="">
-							Ark SPA Palace – заведение с репутацией. Ему уже исполнилось семь, и его знает каждый одессит. Тут есть большой бассейн на пять дорожек,а также все виды бань и саун, которые только можно себе представить.
-							<br> Японские офуро (три чана с водой разной температуры), римские термы, финские сауны, русская и соляная бани, хаммам, а также баня Гиппократа с комфортной температурой +35. Больше всего удивила «эскимосская» снежная комната: там полно снега,
-							бодряще холодно (-5) и можно остыть за пару секунд, не ныряя в бассейн с ледяной водой (признаться, я никогда не могу на такое решиться).
-						</p>
+				<div class="with-img section narrow rel" style="padding-left: 200px;">
+					<div class="location left italic" style="text-align: right;">
+						<p>Адрес:</p>
+						<p>ул. Генуэзская, 1А</p>
 					</div>
-				</div>
-
-
-
-				<div class="with-img section narrow">
 					<img src="public/i/odessa/spa/6.png" alt="">
 				</div>
 
-				<p class="narrow section">
-					Процедура, которая меня покорила, - спа-кинотеатр. Темный зал, удобные кресла, на экране – медитативный фильм о жизни глубоководных рыб. Надо устроиться поудобнее, а мастер тем временем займется массажем ног. Фильм смотреть невозможно – от удовольствия
-					глаза просто закатываются. И это при том, что движения – довольно ощутимые, с элементами лимфодренажа, а иногда так щекотно, что невозможно удержаться от хохота. Мастер Станислава говорит, что это идеально после путешествия из Киева в Одессу на поезде
-					или машине, когда после шестичасового сидения ноги отекают. После процедуры ощущения фантастические: свежесть, легкость, взрыв энергии – не только в ступнях, но и во всем теле. Но ни одной фотографией я поделиться не могу: везде у меня совершенно
-					неприличное выражение лица, блаженное и потрясенное.
-				</p>
+
+
 
 				<div class="narrow section rel">
 					<p class="uppercase sans middle-default" style="position:absolute; top:40%; right:0; width:50%; padding-left:30px ">В Ark SPA Palace можно легко провести весь день, дефилируя в банном халате из одного кабинета в другой. </p>
@@ -190,106 +160,6 @@
 					</div>
 				</div>
 
-				<p class="narrow section">
-					Такого размаха спа-услуг я в Украине не припомню: тут есть все виды массажа, косметологии по лицу и телу, стрижки и окрашивания, маникюр и педикюр. После массажа теплыми камнями и травяного чая я расплачиваюсь на стойке reception – и, надев свою летнюю
-					пижаму, еду в KADORR Hotel Resort and Spa.
-				</p>
-
-				<div class="with-img section narrow">
-					<img src="public/i/odessa/spa/8.png" alt="">
-				</div>
-
-				<p class="narrow section">
-					И тут меня ждет большое открытие: KADORR Hotel Resort and Spa – это, без сомнения, лучший спа из тех, которые я видела в Украине. Во-первых, он является неотъемлемой частью пятизвездного отеля (со всеми вытекающими в виде пушистых халатов, полотенец,
-					кабин, интерьера и так далее). Во-вторых, находится на горе, с которой видно безмятежное море. В-третьих, предоставляет услуги высочайшего класса, когда все безупречно, - но не давит роскошью или, упаси бог, пафосом. Лаконичный интерьер, море свежих
-					цветов, вид на море почти из всех кабинетов.
-				</p>
-
-				<p class="narrow section">
-					Здешнее пространство (спортзал с тренажерами, как в Tsarsky и видом на акваторию, кабинеты, бассейны) разделено на мужскую и женскую зоны. И это без преувеличения прекрасно: ни у одной посетительницы не возникнет искушения заявиться, скажем, на йогу в
-					полном макияже и накладных ресницах, или отправиться в бассейн в купальнике, напоминающем наряд для cos-play.
-				</p>
-
-				<div class="narrow section rel" style="font-size: 0;">
-					<div class="img" style="width:50%; display: inline-block; vertical-align: top;">
-						<img src="public/i/odessa/spa/9.png" alt="">
-					</div>
-					<div class="" style="width:50%; display: inline-block; vertical-align: top; ">
-						<div class="location right italic" style="position:static">
-							<p>Адрес:</p>
-							<p>Французский Бульвар, 66/3</p>
-						</div>
-						<p style="padding-left: 15px; margin-top:15px;">
-							Сильнее всего меня впечатляет кабинет для маникюра и педикюра (я мгновенно жалею, что не записалась сюда заранее). Здесь собрана изысканная лакотека: не только лучшие представители Chanel и Dior, но и редкие Marc Jacobs, Tom Ford c серьезным выбором оттенков.
-							Но главная фишка кабинета – две стеклянные стены. Благодаря им кажется, что, сидя в кресле, паришь над морем. И это превращает заурядную манипуляцию в какой-то незабываемый аттракцион.
-						</p>
-					</div>
-				</div>
-
-				<div class="with-img section narrow">
-					<img src="public/i/odessa/spa/10.png" alt="">
-				</div>
-
-				<p class="narrow section">
-					Впрочем, меня тоже ждет кое-что: гидромассаж в окружении живых орхидей и свеч. Какое-то время я пытаюсь думать о том, чтобы не намочить кудри, но потом собираю волосы в хвост – и наслаждаюсь каждой минутой.
-					<br> Краем сознания понимаю, что должна эффектно позировать на камеру, но атмосфера захватывает – и я расслабляюсь полностью.
-				</p>
-
-				<div class="narrow section" style="font-size: 0;">
-					<div style="width:70%; padding-right: 20px; display: inline-block; vertical-align: top;">
-						<img src="public/i/odessa/spa/11.png" alt="">
-					</div>
-					<div style="width:30%; display: inline-block; vertical-align: top;">
-						<div class="location italic" style="position:static; margin-top:20px;">
-							<p>Адрес:</p>
-							<p>пер. Хрустальный, 1</p>
-						</div>
-						<img src="public/i/odessa/spa/12.png" alt="" style="margin-top:20px;">
-					</div>
-				</div>
-
-				<p class="narrow section">
-					После ванной ждет массаж в кабинете с видом на горизонт и морскую гладь. У мастера своя, авторская техника, но спина узнает элементы испанского массажа, когда нажим и скольжение совершаются не кистью, а предплечьями, а одно движение перетекает в другое.
-					<br> И это, конечно, блаженство. Уходить не хочется совершенно, потому я отправляюсь в ресторан (с видом на море, конечно же) – и там неспешно потягиваю чай.
-					<br> Моя Mastercard Platinum послушно пикает, оплачивая красивую жизнь, и я отправляюсь в следующую экспедицию.
-				</p>
-
-				<p class="narrow section uppercase sans middle-default" style="text-align: center;text-align: center;
-    line-height: 20px; padding: 0 10%;">
-					Кондиционер в Mercedes-Benz создает идеальный микроклимат в салоне, но через воздухозаборники внезапно проникает йодистый воздух – и я опускаю стекла. Действительно, вовсю пахнет морем, и это кружит голову похлеще шампанского.
-				</p>
-
-				<div class="with-two-images narrow section">
-					<img src="public/i/odessa/spa/13.png" alt="">
-					<img src="public/i/odessa/spa/14.png" alt="">
-				</div>
-
-				<p class="narrow section">
-					В Palace Del Mar я забронировала любимую процедуру заезжих звезд – спа-уход для рук. Она хороша, чтобы поддерживать руки и кутикулы в безупречном состоянии круглый год: летом, когда от солнца кожа стареет, и зимой, когда буквально трескается от холода.
-					Мастер Катя, настоящая одесситка, не перестает меня смешить, так что помимо ухоженной кожи я получаю заряд эмоций.
-				</p>
-
-				<p class="narrow section">
-					Но что касается профессиональной части, тут все безупречно: медная ванна для рук с маслом и лепестками роз, скраб для кожи рук, маска, сыворотка и масло. Все пахнет как и положено – тонко, нежно, обволакивающе. Затем я провожу 20 минут в термоварежках,
-					чтобы средства проникли глубже.
-				</p>
-
-				<p class="narrow section">
-					Уже когда мои руки отполированы, подпитаны, увлажнены и сияют, будто на них нанесен хайлайтер, Катя застенчиво говорит, что гель-лак на одном из моих пальцев выглядит несовершенно – и за пять минут возвращает ему первозданную красоту.
-				</p>
-
-				<div class="with-two-images narrow section">
-					<img src="public/i/odessa/spa/15.png" alt="">
-					<img src="public/i/odessa/spa/16.png" alt="">
-				</div>
-
-				<p class="narrow section">
-					Расплачиваясь, я мысленно радуюсь, как хорош мой глянцевый лак в сочетании со сдержанной матовой чернотой Mastercard Platinum.
-				</p>
-
-				<p class="narrow section">
-					А потом – и на руле моей прекрасной белой птицы Mercedes-Benz. Дорожный поток расступается сам собой – похоже, всем понятно, кто главный на этом празднике жизни.
-				</p>
 
 				<p class="narrow section">
 					<span class="bold">Фото</span>: Kate Lang <br>
